--- a/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/index.html
+++ b/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/index.html
@@ -46,11 +46,12 @@
 <div class="container" >
 	<div class="row">
 		<div class="col-12 col-sm-6 col-md-6 col-lg-3 tile" id="menue-tile" >
-			<span>Menue</span>
+			<span><a href="./menue.html">Menue</a></span>
+
 		</div>
 
 		<div class="col-12 col-sm-6 col-md-6 col-lg-3 tile" id="specials-tile" >
-			<span>Specials</span>
+			<a href=".specials.html" target="_blank"><span>Specials</span></a>
 		</div>
 		<div class="col-12 col-sm-12 col-md-12 col-lg-3 tile" id="map-tile" style="width:50%">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30703106.29150179!2d64.43913872316905!3d20.053048728922782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1586169723857!5m2!1sen!2sin" width="100%" height="100%" frameborder="1"  allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
