navbar fixed. footer fixed. jumbotron image overlap fixed. added menue file. added specials file.

--- a/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/index.html
+++ b/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/index.html
@@ -22,39 +22,50 @@
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
+				<div class="container">
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="nav navbar-nav float-right " id ="nav-list">
 			      <li class="nav-item active">
-			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 			      </li>
 			      <li class="nav-item">
-			        <a class="nav-link" href="#">Menu</a>
+			        <a class="nav-link" href="./menue.html">Menu</a>
 			      </li>
+						<li class="nav-item">
+							<a href="./specials.html" class="nav-link">Specials</a>
+						</li>
+						<li class="nav-item">
+							<a href="#about" class="nav-link">About</a>
+						</li>
 			    </ul>
+
+			</div>
 			</div>
 		</div>
 	</nav>
 </header>
 
 
+
 <div class="container">
 	<div class="jumbotron">
 		<img src="./media/images/jumbotron_768.jpg" alt="restro image" class="img-fluid invisible-img">
 	</div>
+
 </div>
 
 <div class="container" >
 	<div class="row">
 		<div class="col-12 col-sm-6 col-md-6 col-lg-3 tile" id="menue-tile" >
-			<span><a href="./menue.html">Menue</a></span>
+			<a href="./menue.html"><div class="tile"> <span>Menue</span></div></a>
 
 		</div>
 
 		<div class="col-12 col-sm-6 col-md-6 col-lg-3 tile" id="specials-tile" >
-			<a href=".specials.html" target="_blank"><span>Specials</span></a>
+			<a href="./specials.html"><div class="tile"> <span>Specials</span></div></a>
 		</div>
 		<div class="col-12 col-sm-12 col-md-12 col-lg-3 tile" id="map-tile" style="width:50%">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30703106.29150179!2d64.43913872316905!3d20.053048728922782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1586169723857!5m2!1sen!2sin" width="100%" height="100%" frameborder="1"  allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
+			<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30703106.29150179!2d64.43913872316905!3d20.053048728922782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1586169723857!5m2!1sen!2sin" width="100%" height="100%" frameborder="1"  allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe> -->
 			<span>Map</span>
 		</div>
 	</div>
@@ -66,23 +77,29 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 text-center">
-				<a href="">Working Hours <br></a>
+				<a href="#" class="footer-title">Working Hours <br></a>
 				Sun-Thurs: 11:15am - 10:00pm<br>
 				Fri: 11:15am - 2:30pm<br>
 				Saturday Closed
-
+			<hr class="footer-hr  d-block d-sm-none">
 			</div>
+
+
 			<div class="col-sm-4 text-center">
-				<a href=""> Address <br></a>
+				<a href="" id="about" class="footer-title"> Address <br></a>
 				7105 Reisterstown Road<br>
           Baltimore, MD 21215
           <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+					<hr class="footer-hr  d-block d-sm-none">
 			</div>
+
 			<div class="col-sm-4 text-center">
-				<a href="">Testimonials</a>
+				<a href="" class="footer-title">Testimonials</a>
 				<p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
 		 <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
 			</div>
+
+
 	</div>
 </div>
 </footer>
